...
                        fit: BoxFit.cover,
                      ),
                    ),
                  ),
                  Text(
                    key: const Key('welcomeText'),
                    'Welcome to SeatSaver',
                    style: Theme.of(context).textTheme.titleLarge,
                  ),
                  FFButtonWidget(
                    key: const Key('getStartedButton'),
                    onPressed: () {
                      Navigator.of(context).push(
                        MobileFadeInRoute(
                          page: const Homepage(),
                          routeName: Routes.homepage,
                        ),
...
